--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"electron ."
+    "start": "electron ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^1.6.1"
+    "electron": "^1.6.1",
+    "moment": "^2.17.1"
   }
 }
